roles/tpa_single_node/templates/services/guac/graphql/050-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guac-graphql
  labels:
    app.kubernetes.io/name: guac-graphql
    app.kubernetes.io/component: guac
    app.kubernetes.io/instance: redhat-trusted-profile-analyzer
    app.kubernetes.io/version: 1.1.1
    app.kubernetes.io/part-of: trusted-profile-analyzer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: guac-graphql
      app.kubernetes.io/component: guac
      app.kubernetes.io/instance: redhat-trusted-profile-analyzer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: trustification
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9010
